--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bprogress/next": "^3.2.12",
     "@emailjs/browser": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.511.0",
+    "motion": "^12.15.0",
     "next": "15.3.2",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "tailwindcss": "3",
     "zod": "^3.25.34"
