--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "bun test --coverage",
+    "test-hero": "bun test hero.test.tsx"
   },
   "dependencies": {
     "@bprogress/next": "^3.2.12",
@@ -27,12 +29,17 @@
     "zod": "^3.25.34"
   },
   "devDependencies": {
-    "typescript": "^5.5.3",
+    "@eslint/eslintrc": "^3",
+    "@happy-dom/global-registrator": "^20.0.11",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/bun": "^1.3.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5.5.3"
   }
 }
