--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/bun": "^1.3.3",
     "@types/node": "^20",
     "@types/react": "^19",
